--- a/src/components/Todo/List.css
+++ b/src/components/Todo/List.css
@@ -1,21 +1,34 @@
 li {
+  position: relative;
   padding: 10px;
   border: 1px solid #d3d3d3;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-radius: 10px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease, padding 0.2s ease;
 }
 li:not(:last-child) {
-  margin: 0 0 10px 0;
+  margin: 0 0 30px 0;
 }
+
+li:hover {
+  box-shadow: 0 5px 15px #d3d3d3d3;
+  transform: translateY(-2px);
+}
+
 .content_wrap {
   padding: 10px 20px;
   flex: 1;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 .content_wrap h2 {
   margin-left: 20px;
+  overflow-wrap: anywhere;
+  max-width: 500px;
+  width: 100%;
 }
 
 .control_wrap {
@@ -26,4 +39,33 @@ li:not(:last-child) {
 }
 .control_wrap button {
   margin: 0 10px;
+}
+.checkbox {
+  flex-shrink: 0;
+  width: 20px;
+  height: 20px;
+}
+
+.editInput {
+  margin-left: 10px;
+  border: 2px solid #3c84ab;
+  padding: 10px;
+  border-radius: 10px;
+  width: 100%;
+  max-width: 500px;
+}
+
+@media screen and (max-width: 600px) {
+  li {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .content_wrap h2,
+  .editInput {
+    font-size: 18px;
+  }
+  .control_wrap {
+    width: 100%;
+    margin: 0;
+  }
 }
